<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Planes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="start_game">Start Game</string>
    <string name="view_achievements">View Achievements</string>
    <string name="title_activity_achievements">AchievementsActivity</string>
    <string name="back_to_main">Back</string>
    <string name="machine_gun">Machine Gun</string>
    <string name="missile_launcher">Missile Launcher</string>
    <string name="shotgun">Shotgun</string>
    <string name="laser">Laser</string>
    <string name="shield">Shield</string>
    <string name="homing_missiles">Homing Missiles</string>
    <string name="collision">Collision</string>

</resources>
